# dfam-curator

./: .gitignore  Cargo.toml  Dfam_Seeds.md  LICENSE  README.md
.github/workflows/: release.yml
dfam-coord/: Cargo.toml  README.md
dfam-coord/src/: lib.rs
dfam-stk-io/: Cargo.toml
dfam-stk-io/src/: lib.rs
docs/: repbase-import.md
examples/: ex1.stk  example-cm.align  family-47.fa.refiner.stk
src/: alignment.rs  blast.rs  build.rs  consensus.rs  kimura.rs  lib.rs  matrix.rs  quality.rs
src/dfam/: cache.rs  clean.rs  edit.rs  fetch.rs  lint.rs  mod.rs  record.rs  repbase.rs
src/io/: clustal.rs  crossmatch.rs  fasta.rs  ig_family.rs  ig_msa.rs  linup_fmt.rs  mod.rs  stockholm.rs  twobit.rs
tests/: file_processing.rs
tests/data/input/ref_dir1/: GCF999999.1.2bit  GCF999999.1.fa
tests/data/input/ref_dir2/: GCA_8888888.1.2bit  GCF_666666.1.fa  GCF_777777.2.2bit  GCF_777777.2.fa
tests/data/input/test1/: README.md  expected-input.fa  input.fa
tests/data/input/test1/test/: input.fa
tests/data/input/test2/: expected-input.stk  input.stk
tests/data/input/test2/test/: input.stk
tests/data/input/test3/: README.md  input1.fa  input2.stk
