[workspace]
members = [".", "dfam-coord", "dfam-stk-io"]
resolver = "2"

[package]
name = "dfam-curator"
version = "0.4.0"
edition = "2024"
description = "Dfam-centric MSA curation library and toolkit"
autobins = false

[lib]
name = "dfam_curator"
path = "src/lib.rs"

[[bin]]
name = "linup"
path = "src/bin/linup.rs"

[[bin]]
name = "stk"
path = "src/bin/stk.rs"

[[bin]]
name = "update-cache"
path = "src/bin/update-cache.rs"

[[bin]]
name = "discoord"
path = "src/bin/discoord.rs"

[dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
serde_json = "1"
dirs = "5"
strsim = "0.11"
regex = "1"
dfam-coord = { path = "dfam-coord" }
dfam-stk-io = { path = "dfam-stk-io" }

[dev-dependencies]
