[workspace]
members = [".", "dfam-coord", "dfam-stk-io"]
resolver = "2"

[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = ["github"]
installers = []
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[package]
name = "dfam-curator"
version = "0.5.0"
edition = "2024"
description = "Dfam-centric MSA curation library and toolkit"
license = "CC0-1.0"
repository = "https://github.com/Dfam-consortium/dfam-curator"
autobins = false

[lib]
name = "dfam_curator"
path = "src/lib.rs"

[[bin]]
name = "linup"
path = "src/bin/linup.rs"

[[bin]]
name = "stk"
path = "src/bin/stk.rs"

[[bin]]
name = "update-cache"
path = "src/bin/update-cache.rs"

[[bin]]
name = "discoord"
path = "src/bin/discoord.rs"

[[bin]]
name = "tsd"
path = "src/bin/tsd.rs"

[dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
serde_json = "1"
dirs = "5"
strsim = "0.11"
regex = "1"
ureq = "2"
dfam-coord = { path = "dfam-coord" }
dfam-stk-io = { path = "dfam-stk-io" }

[dev-dependencies]
